--- a/mini-media-frontend/package.json
+++ b/mini-media-frontend/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
