--- a/mini-media-backend/package.json
+++ b/mini-media-backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start:dev": "npx ts-node-dev --respawn --transpile-only src/server.ts",
-    "start": "npx ts-node-dev --respawn --transpile-only src/server.ts",
+    "start:prod": "node src/dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
