--- a/mini-media-backend/package.json
+++ b/mini-media-backend/package.json
@@ -26,7 +26,14 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
-    "@types/jsonwebtoken": "^9.0.8",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.0",
+    "@types/http-status": "^0.2.30",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.13.5",
+    "@types/socket.io": "^3.0.1",
     "typescript": "^5.7.3"
   }
 }
