--- a/mini-media-backend/.env
+++ b/mini-media-backend/.env
@@ -1,4 +1,4 @@
-NODE_ENV="development" #development, #production
+NODE_ENV="production" #development, #production
 PORT=5000
 LOCAL_DATABASE_URL="mongodb://127.0.0.1:27017/learning-socket"
 REMOTE_DATABASE_URL="mongodb+srv://learning_socket:jFacE3xmEzn3Ptwi@simple-node-app.ybb3hyi.mongodb.net/learning-socket"
